refactor: improve error handling and response structure in authentication and shift services